Update Get Telegram subscribers.ipynb

--- a/Get Telegram subscribers.ipynb
+++ b/Get Telegram subscribers.ipynb
@@ -15,10 +15,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "api_id = 2119671\n",
-    "api_hash = 'd0d014cb8d7cdb5678f18e91fd927ab1'\n",
-    "phone = '+79047659836'\n",
-    "my_channel = 'leftjoin"
+    "api_id = 0\n",
+    "api_hash = ''\n",
+    "phone = '+71234567890'\n",
+    "my_channel = '"
    ]
   },
   {
