--- a/Get Telegram subscribers.ipynb
+++ b/Get Telegram subscribers.ipynb
@@ -17,8 +17,8 @@
    "source": [
     "api_id = 0\n",
     "api_hash = ''\n",
-    "phone = '+71234567890'\n",
-    "my_channel = '"
+    "phone = '+79123456789'\n",
+    "my_channel = ''"
    ]
   },
   {
