--- a/get_telegram_subscribers.ipynb
+++ b/get_telegram_subscribers.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from telethon import TelegramClient"
+    "from telethon import TelegramClient\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -34,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +44,32 @@
     "            if d.is_channel}\n",
     "channel = channels[my_channel]\n",
     "members_telethon_list = await client.get_participants(channel, aggressive=True)\n",
-    "members_list = [member.username for member in members_telethon_list if member.username is not None]"
+    "username_list = [member.username for member in members_telethon_list]\n",
+    "first_name_list = [member.first_name for member in members_telethon_list]\n",
+    "last_name_list = [member.last_name for member in members_telethon_list]\n",
+    "phone_list = [member.phone for member in members_telethon_list]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame()\n",
+    "df['username'] = username_list\n",
+    "df['first_name'] = first_name_list\n",
+    "df['last_name'] = last_name_list\n",
+    "df['phone'] = phone_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('subscribers.csv', index=False)"
    ]
   },
   {
@@ -51,11 +77,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "with open('subscribers.txt', 'w') as f:\n",
-    "    for item in members_list:\n",
-    "        f.write(\"%s\\n\" % item)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
