--- a/get_telegram_subscribers.ipynb
+++ b/get_telegram_subscribers.ipynb
@@ -16,10 +16,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "api_id = 0\n",
-    "api_hash = ''\n",
-    "phone = '+79123456789'\n",
-    "my_channel = ''"
+    "api_id = int(input('API id: '))\n",
+    "api_hash = input('API hash: ')\n",
+    "phone = input('Phone: ')\n",
+    "my_channel = input('Channel name: ')"
    ]
   },
   {
@@ -71,13 +71,6 @@
    "source": [
     "df.to_csv('subscribers.csv', index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
