--- a/get_telegram_subscribers.ipynb
+++ b/get_telegram_subscribers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,19 +12,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
-    "api_id = int(input('API id: '))\n",
-    "api_hash = input('API hash: ')\n",
-    "phone = input('Phone: ')\n",
-    "my_channel = input('Channel name: ')"
+    "api_id = 0\n",
+    "api_hash = ''\n",
+    "phone = '+71234567890'\n",
+    "channel_href = 'https://t.me/leftjoin'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,13 +35,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
     "channels = {d.entity.username: d.entity\n",
     "            for d in dialogs\n",
     "            if d.is_channel}\n",
+    "my_channel = channel_href.split('/')[-1]\n",
     "channel = channels[my_channel]\n",
     "members_telethon_list = await client.get_participants(channel, aggressive=True)\n",
     "username_list = [member.username for member in members_telethon_list]\n",
@@ -52,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
